[package]
name = "cash_server_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly bundle for Cash server"
repository = "https://github.com/brumeproject/cash.server.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = "z"

[dependencies]
network_wasm = { path = "../../node_modules/@hazae41/network.wasm/dist/wasm" }
secp256k1_wasm = { path = "../../node_modules/@hazae41/secp256k1.wasm/dist/wasm" }
